# client-authentication

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint-celery.sh  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: client_auth.yaml
authentication/: serializers.py  urls.py  views.py
authentication/migrations/: .env.example
base/: settings.py  urls.py
helm/client-authentication/: Chart.yaml  postgres.values.yaml  values.yaml
helm/client-authentication-worker/: Chart.yaml  values.yaml
helm/client-authentication-worker/templates/: service.yaml  worker.deployment.yaml
helm/client-authentication/templates/: NOTES.txt  _helpers.tpl  configMap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
helm/client-authentication/templates/tests/: test-connection.yaml
reservations/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
reservations/management/commands/: digest_event.py
reservations/migrations/: 0001_initial.py  0002_alter_queuenode_last_number_in_queue.py
